<resources>
    <string name="app_name">Raccoon Lista</string>
    <string name="descricao">descricao</string>
    <string name="data">data</string>
    <string name="adiciona_tarefa">Adiciona Tarefa</string>
    <string name="inserir_tarefa">Inserir Tarefa</string>
    <string name="descri_o">Descrição:</string>
    <string name="data2">Data:</string>
    <string name="insere">Insere</string>
    <string name="descri_o_da_tarefa">Descrição da tarefa</string>
    <string name="data_da_tarefa">Data da tarefa</string>
    <string name="descri_o_ou_data_inv_lidos">Descrição ou data inválidos</string>
    <string name="n_o_h_tarefas_inseridas">Não há tarefas inseridas</string>
</resources>